<resources>
    <string name="app_name">Probando1</string>
    <string name="Name">Name</string>
    <string name="Toppings">Toppings</string>
    <string name="Whippedcream">Whipped cream</string>
    <string name="Chocolate">Chocolate</string>
    <string name="Quantity">Quantity</string>
    <string name="Order">Order</string>
    <string name="add_whipped_cream">"Add whipped cream? "</string>
    <string name="add_chocolate">"Add chocolate? "</string>
    <string name="thankyou">Thank you!</string>
    <string name="no_more">You cannot have more than 100 coffees</string>
    <string name="no_less">You cannot have less than 1 coffee</string>
    <string name="order_for">"Just Java order for "</string>
</resources>
